<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="choice_your_nfavourite_coffee">Choice your\nFavourite Coffee</string>
    <string name="get_started">Get Started</string>
    <string name="searchPlaceholder">Tìm kiếm...</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="profile">Profile</string>
    <string name="my_order">My order</string>
    <string name="chatbot">Chatbot</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="explorer">Explorer</string>
    <string name="enter_your_discount_code">Enter Your Discount Code</string>
    <string name="apply">Apply</string>
    <string name="default_web_client_id">866704172901-7sclc9vas7mmmeisehkchlt1ei2f5s2p.apps.googleusercontent.com</string>
</resources>