<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightCream"
    tools:context=".Activity.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="90dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/profile" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="Đường Minh Sơn"
                    android:textColor="@color/darkBrown"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/brown_full_corner_bg"
                    android:padding="12dp"
                    android:src="@drawable/bell_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_full_corner_bg"
                    android:drawableStart="@drawable/search_icon"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="8dp"
                    android:text="@string/searchPlaceholder" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/brown_full_corner_bg"
                    android:padding="12dp"
                    android:src="@drawable/settings"
                    app:srcCompat="@drawable/settings" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/banner"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="16dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/CircleCornerImageView"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ProgressBar
                    android:id="@+id/progressBarBanner"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/banner" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="Category"
                android:textColor="@color/darkBrown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.recyclerview.widget.RecyclerView>

                <ProgressBar
                    android:id="@+id/progressBarCategory"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/categoryView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popular_coffees"
                    android:textColor="@color/darkBrown"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="See all" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPopular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ProgressBar
                    android:id="@+id/progressBarPopular"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/recyclerViewPopular" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/btn_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/explorer"
                        android:textAlignment="center"
                        android:textColor="@color/darkBrown" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cartBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/btn_2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/cart"
                        android:textAlignment="center"
                        android:textColor="@color/darkBrown" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/btn_3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/wishlist"
                        android:textAlignment="center"
                        android:textColor="@color/darkBrown" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/btn_4" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/my_order"
                        android:textAlignment="center"
                        android:textColor="@color/darkBrown" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/btn_5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/profile"
                        android:textAlignment="center"
                        android:textColor="@color/darkBrown"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>